<resources>
    <string name="app_name">Basketball Recorder</string>
    <string name="history_list_title">Basketball Records</string>

    <string name="score">score</string>
    <string name="miss">miss</string>
    <string name="assist">assist</string>
    <string name="rebound">rebound</string>
    <string name="steal">steal</string>

    <string name="stat_label_points">Points</string>
    <string name="stat_label_assist">Assists</string>
    <string name="stat_label_rebound">Rebounds</string>
    <string name="stat_label_steal">Steals</string>
    <string name="stat_label_shooting_percentage">FG Percentage</string>

    <string name="email_stats">Email Stats Report</string>
</resources>
