<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_label_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/table_row1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <Button
            android:id="@+id/button_score"
            android:background="@color/score"
            android:text="@string/score"
            android:textColor="@color/event_button_text"
            android:textSize="@dimen/event_button_big_text_size"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_miss"
            android:background="@color/miss"
            android:text="@string/miss"
            android:textColor="@color/event_button_text"
            android:textSize="@dimen/event_button_big_text_size"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:id="@+id/table_row2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_assist"
            android:background="@color/assist"
            android:textColor="@color/event_button_text"
            android:textSize="@dimen/event_button_small_text_size"
            android:text="@string/assist"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_steal"
            android:background="@color/steal"
            android:text="@string/steal"
            android:textColor="@color/event_button_text"
            android:textSize="@dimen/event_button_small_text_size"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_rebound"
            android:background="@color/rebound"
            android:text="@string/rebound"
            android:textColor="@color/event_button_text"
            android:textSize="@dimen/event_button_small_text_size"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>